# gmail-mcp-server

./: .gitignore  README.md  auth.py  main.py  pyproject.toml  requirements.txt
src/gmail_mcp_server/: cli.py  gmail_client.py  server.py
