[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gmail-mcp-server"
version = "0.1.0"
description = "Gmail MCP Server built using Model Context Protocol"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "mcp",
    "google-api-python-client",
    "google-auth",
    "google-auth-oauthlib"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
[project.scripts]
gmail-mcp = "gmail_mcp_server.cli:serve"